# zebrands-project

./: README.md  docker-compose-prod.yaml  docker-compose.yaml  todo.md
.github/workflows/: django-tests.yml
catalog-system/: DockerFile  DockerFileProd  pyproject.toml
catalog-system/api/: models.py  tests.py  urls.py  views.py
catalog-system/api/serializers/: __init__.py  product_serializers.py  user_serializers.py
catalog-system/api/tests/: __init__.py  tests_email_utils.py  tests_product_view.py  tests_user_view.py
catalog-system/api/utils/: __init__.py  email_utils.py
catalog-system/api/views/: product_views.py  user_views.py
catalog-system/main/: settings.py  urls.py
